@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.7
 
+	- The scheduler did not support "AuthType Default" in IPP
+	  policies (STR #2749)
 	- The scheduler did not support the "HideImplicitMembers"
 	  directive as documented (STR #2760)
 	- "make check" didn't return a non-zero exit code on
